--- a/templates/clothing/list.html
+++ b/templates/clothing/list.html
@@ -2,22 +2,15 @@
  * @Author: Leili
  * @Date: 2025-05-21 12:49:52
  * @LastEditors: Leili
- * @LastEditTime: 2025-05-26 14:16:50
+ * @LastEditTime: 2025-06-27 18:19:18
  * @FilePath: /StorageManagement/templates/clothing/list.html
  * @Description: 
 -->
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>衣服列表</title>
-    <link rel="icon" href="{{ url_for('static', filename='icon/物品管理.svg') }}" type="image/x-icon">
-    <!-- Bootstrap 5 样式（CDN） -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
-    <!-- 本地自定义样式 -->
+    {% from 'macros.html' import head_meta %}
+    {{ head_meta('衣服列表') }}
     <link rel="stylesheet" href="/static/css/main.css">
     <link rel="stylesheet" href="/static/css/list.css">
 </head>
